--- a/.env.local
+++ b/.env.local
@@ -6,3 +6,4 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=cruise-and-bruise
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=cruise-and-bruise.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MSG_SENDER_ID=789552132611
 NEXT_PUBLIC_FIREBASE_APP_ID=1:789552132611:web:78ce3735f7972baae65436
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-WTSMD0GMZ4
