--- a/.env.local
+++ b/.env.local
@@ -1,14 +1,10 @@
 # Firebase configuration for Cruise & Bruise
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyDo9j8ExbBvDh_4mEM_714vF4uv5GYKtJc
-
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=cruise-and-bruise-d12c8.firebaseapp.com
-
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=cruise-and-bruise-d12c8
-
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=cruise-and-bruise-d12c8.firebasestorage.app
-
 NEXT_PUBLIC_FIREBASE_MSG_SENDER_ID=804965137421
-
 NEXT_PUBLIC_FIREBASE_APP_ID=1:804965137421:web:2d0af10e1ed893e6d52944
-
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-YQZ2S9YCXZ
+# Admin pass (set this in Vercel environment variables too)
+NEXT_PUBLIC_ADMIN_PASS=lowkey_0107
