--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
