--- a/.env.local
+++ b/.env.local
@@ -7,7 +7,8 @@ NEXT_PUBLIC_FIREBASE_MSG_SENDER_ID=804965137421
 NEXT_PUBLIC_FIREBASE_APP_ID=1:804965137421:web:2d0af10e1ed893e6d52944
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-YQZ2S9YCXZ
 # Admin pass (set this in Vercel environment variables too)
-NEXT_PUBLIC_ADMIN_PASS=lowkey_0107
-# free News API key (if you want live news). Leave blank to use seeded trends
-NEXT_PUBLIC_NEWS_API_KEY=
-NEXT_PUBLIC_NEWS_PROVIDER=newsdata # or gnews
+ADMIN_EMAIL=lowkey@cruiseandbruise.com
+ADMIN_PASSWORD=lowkeyUltimatum
+
+WHATSAPP_GROUP=https://chat.whatsapp.com/Ll3R7OUbdjq3HsehVpskpz?mode=ems_copy_t
+NEWS_API_KEY=YOUR_NEWSAPI_KEY
