--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "special-squad-app",
+  "name": "my-social-app",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -12,7 +12,6 @@
     "next": "15.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^2.2.3",
-    "uuid": "^9.0.0"
+    "swr": "^2.2.0"
   }
 }
