--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 3000"
   },
   "dependencies": {
-    "firebase": "^9.23.0",
-    "next": "15.5.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "axios": "^1.5.0",
+    "classnames": "^2.3.2",
+    "firebase": "^10.8.0",
+    "next": "13.5.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "swr": "^2.2.0"
   }
 }
