--- a/.env.local
+++ b/.env.local
@@ -7,8 +7,9 @@ NEXT_PUBLIC_FIREBASE_MSG_SENDER_ID=804965137421
 NEXT_PUBLIC_FIREBASE_APP_ID=1:804965137421:web:2d0af10e1ed893e6d52944
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-YQZ2S9YCXZ
 # Admin pass (set this in Vercel environment variables too)
-ADMIN_EMAIL=lowkey@cruiseandbruise.com
-ADMIN_PASSWORD=lowkeyUltimatum
+NEXT_PUBLIC_ADMIN_EMAIL=lowkey@cruiseandbruise.com
+NEXT_PUBLIC_ADMIN_PASS=lowkeyUltimatum
 
-WHATSAPP_GROUP=https://chat.whatsapp.com/Ll3R7OUbdjq3HsehVpskpz?mode=ems_copy_t
+NEXT_PUBLIC_GC_LINK=https://chat.whatsapp.com/Ll3R7OUbdjq3HsehVpskpz?mode=ems_copy_t
 NEWS_API_KEY=7f85bd47bae649e7a9407d9827acbfc8
+NEXT_PUBLIC_WHATSAPP_CONTACT=https://wa.me/2348082591190
