--- a/package.json
+++ b/package.json
@@ -5,21 +5,19 @@
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p 3000",
-    "lint": "next lint"
+    "start": "next start -p 3000"
   },
   "dependencies": {
-    "axios": "^1.5.0",
-    "classnames": "^2.3.2",
-    "firebase": "^10.8.0",
-    "next": "13.5.6",
+    "axios": "^1.7.2",
+    "classnames": "^2.5.1",
+    "firebase": "^10.12.2",
+    "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "swr": "^2.2.0"
+    "swr": "^2.2.4"
   },
-  "devDependencies": {
-    "eslint": "8.56.0",
-    "eslint-config-next": "13.5.6"
+  "engines": {
+    "node": "18.x"
   }
 }
