--- a/.env.local
+++ b/.env.local
@@ -1,15 +1,15 @@
-# Firebase configuration for Cruise & Bruise
-NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyDo9j8ExbBvDh_4mEM_714vF4uv5GYKtJc
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=cruise-and-bruise-d12c8.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=cruise-and-bruise-d12c8
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=cruise-and-bruise-d12c8.firebasestorage.app
-NEXT_PUBLIC_FIREBASE_MSG_SENDER_ID=804965137421
-NEXT_PUBLIC_FIREBASE_APP_ID=1:804965137421:web:2d0af10e1ed893e6d52944
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-YQZ2S9YCXZ
-# Admin pass (set this in Vercel environment variables too)
-NEXT_PUBLIC_ADMIN_EMAIL=lowkey@cruiseandbruise.com
-NEXT_PUBLIC_ADMIN_PASS=lowkeyUltimatum
+# 🚨 IMPORTANT: Replace all "YOUR_..." placeholders with your actual Firebase configuration.
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyDo9j8ExbBvDh_4mEM_714vF4uv5GYKtJc"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="cruise-and-bruise-d12c8.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="cruise-and-bruise-d12c8"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="cruise-and-bruise-d12c8.firebasestorage.app"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="804965137421"
+NEXT_PUBLIC_FIREBASE_APP_ID="G-YQZ2S9YCXZ"
 
-NEXT_PUBLIC_GC_LINK=https://chat.whatsapp.com/Ll3R7OUbdjq3HsehVpskpz?mode=ems_copy_t
-NEWS_API_KEY=7f85bd47bae649e7a9407d9827acbfc8
-NEXT_PUBLIC_WHATSAPP_CONTACT=https://wa.me/2348082591190
+# 💎 Custom App Configuration
+NEXT_PUBLIC_GC_WHATSAPP_LINK="https://chat.whatsapp.com/Ll3R7OUbdjq3HsehVpskpz?mode=ems_copy_t"
+NEXT_PUBLIC_DEV_WHATSAPP_CONTACT="https://wa.me/2348082591190"
+NEXT_PUBLIC_GC_NAME="👑✨💥 𝕊𝕡𝕖𝕔𝕚𝕒𝕝 𝕊𝕢𝕦𝕒𝕕 💥✨👑"
+NEXT_PUBLIC_ADMIN_USERNAME="༺𝕷𝖔𝖜𝖐𝖊𝖞 𝕴𝖘 𝕳𝖎𝖒༻"
+# News API is for the Unified Feed integration
+NEWS_API_KEY="7f85bd47bae649e7a9407d9827acbfc8"
