--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "my-social-app",
+  "name": "special-squad-app",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3000"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.5.0",
-    "classnames": "^2.3.2",
-    "firebase": "^10.8.0",
-    "next": "13.5.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.0.3",
-    "swr": "^2.2.0"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "firebase": "^10.12.3",
+    "react-icons": "^5.2.1",
+    "framer-motion": "^11.2.11",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles-engine": "^2.12.2",
+    "next-pwa": "^5.6.0"
   },
-  "engines": {
-    "node": "22.x"
+  "devDependencies": {
+    "eslint": "latest",
+    "eslint-config-next": "latest",
+    "autoprefixer": "latest",
+    "postcss": "latest",
+    "tailwindcss": "latest"
   }
 }
