--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "latest",
     "firebase": "^10.12.3",
     "react-icons": "^5.2.1",
+    "react-hot-toast": "^2.4.1",
     "framer-motion": "^11.2.11",
     "react-tsparticles": "^2.12.0",
     "tsparticles-engine": "^2.12.0",
