--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "special-squad-app",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,22 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.0.0",
     "firebase": "^10.12.3",
-    "react-icons": "^5.2.1",
+    "framer-motion": "^11.2.12",
+    "next": "14.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "framer-motion": "^11.2.11",
-    "react-tsparticles": "^2.12.0",
-    "tsparticles-engine": "^2.12.0",
-    "next-pwa": "^5.6.0"
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
-    "eslint": "latest",
-    "eslint-config-next": "latest",
-    "autoprefixer": "latest",
-    "postcss": "latest",
-    "tailwindcss": "latest"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.4"
   }
 }
