--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
+// package.json (in your project root)
 {
-  "name": "special-squad-app",
-  "version": "0.1.0",
+  "name": "squad-social",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,21 +10,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.0.0",
-    "firebase": "^10.12.3",
-    "framer-motion": "^11.2.12",
-    "next": "14.2.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "firebase": "^10.12.2",
+    "framer-motion": "^11.2.10",
+    "next": "14.2.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "timeago.js": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.4"
+    "tailwindcss": "^3.4.3"
   }
 }
