--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "special-squad-vibe",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,20 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.12.2",
-    "framer-motion": "^11.2.10",
     "next": "14.2.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-hot-toast": "^2.4.1",
+    "react": "18",
+    "react-dom": "18",
+    "firebase": "^10.12.2",
     "react-icons": "^5.2.1",
-    "timeago.js": "^4.0.0-beta.3"
+    "react-hot-toast": "^2.4.1",
+    "framer-motion": "^11.2.10",
+    "timeago.js": "^2.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "8",
+    "eslint-config-next": "14.2.3"
   }
 }
